vlib/v/checker/tests/fn_return_or_err.vv
module main

pub struct Typ {}

pub fn next(mut v []Typ) Typ {
	return v.pop() or { Typ{} }
}

fn main() {
	mut v := [Typ{}]
	last := next(mut v)
	println('$last')
}
